--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,3 +24,20 @@ steps:
 - script: |
     npm run build
   displayName: 'npm install and build'
+
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
+
+- task: UniversalPackages@0
+  inputs:
+    command: 'publish'
+    publishDirectory: '$(Build.ArtifactStagingDirectory)'
+    feedsToUsePublish: 'internal'
+    vstsFeedPublish: '53411d2e-2bd5-43c5-b58a-02342c867073/60e92dfd-c669-4a0d-aa9a-8395dd53e9e3'
+    vstsFeedPackagePublish: 'universal'
+    versionOption: 'minor'
