Update azure-pipelines.yml for Azure Pipelines
Added whitesource

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,3 +41,7 @@ steps:
     vstsFeedPublish: '53411d2e-2bd5-43c5-b58a-02342c867073/60e92dfd-c669-4a0d-aa9a-8395dd53e9e3'
     vstsFeedPackagePublish: 'universal'
     versionOption: 'minor'
+
+- task: WhiteSource@21
+  inputs:
+    cwd: '$(System.DefaultWorkingDirectory)'
